css/styles.css
/***** PHONE 320PX *****/
* {
        margin:  0 auto;
        text-align: center;
    }
    
    .navIntro{
        background-color: #f6f6f6;
    }
    
    .name {
        padding: 10px 0;
        text-align: center;
        font-family: "Shadows Into Light";
        color: #198cff;
    }
    
    .container {
        display: block;
    }

    .itemOne,
    .itemTwo,
    .itemThree {
        padding: 5px 15px;
    }

.item {
    color: #198cff;
    background-color: #fff;
    margin: 10px;
}
    
    .mainNav li {
        max-width:  70%;
        background-color: #ededed;
         color:  #000;
        margin-top: 5px;
        padding: 5px 0;
        font-size: 15px;
        text-transform: uppercase;
        font-weight: 900;
    }
    
    
    /***** INTRO *****/ 


    
    .intro p {
        padding: 0 10px;
        font-size: 1em;
        padding-bottom: 30px;
    }
    
    .intro img {
        width: 80%;
        padding: 0 20px;
        margin-top: 30px;
        margin-bottom: 10px;
    }

    
    /***** PORTFOLIO *****/
    
    .sectionTitle {
        font-family: "Shadows Into Light";
        font-size: .75em;
        width:  80%;
        padding: 20px 0;
        text-transform: uppercase;
    }
    
    .heading {
        margin-top: 30px;
        max-width: 80%;
    }

.heading img {
    width: 80%;
}
    
    .heading h3 {
        padding: 20px 0;
    }
    
    h2 {
        margin-top: 40px;
    }
    
    /*****CONTACT******/
    .contact {
        background-color: #f6f6f6;
        padding-top: 10px;
        margin-top: 30px;
        border-bottom: 1px solid #d6d4d4;
        border-bottom-width:  1px;
        display: inline-block;
    }
    
    .contact h1 {
        font-family: "Shadows Into Light";
        font-size: 1em;
        width:  90%;
        padding: 20px 0;
        text-transform: uppercase;
    }
    
    .contact p {
        max-width: 80%;
    }
    
    #phone {
        padding: 10px 0;
    }
    
    #email {
        padding-bottom: 60px;
    }    
    
    /***** FOOTER *****/
    .footer {
        text-transform: uppercase;
        padding: 20px 10px;
    }
    
    .footerName {
        float: left;
    }
    
    .top {
        float: right;
    }

.footerNav {
    visibility: hidden;
    display: none;
}


/***** TABLET 768*****/

 @media (min-width: 768px) {
     
     .container {
         display: inline-flex;
     }
     
     .intro {
    padding-bottom: 80px;
     }
     
     .intro img {
         width: 30%;
         float: right;
         margin-right: 20px;
     }
     
     .intro p {
         width: 50%;
         padding-top: 30px;
         text-align: left;
         margin: 0;
         margin-left: 40px;
     } 
     
     
     /*****SECTIONS*****/
     
     .sectionContainer {
         display: inline-flex;
         flex-wrap: wrap;
         flex-direction: row;
     }
     
     .heading {
         width: 50%;
     }
     
     .heading p {
         width: 70%;
     }
     
     
     /*****CONATCT*****/
     .contact h1 {
         font-size: 1.25em;
     }

     #conInfo {
         max-width: 70%;
         font-size: 1.25em;
         padding: 20px 0;
     }
     
     #email {
         margin-top: 15px;
     }
     
     /*****FOOTER*****/
     
     .top {
         display: none;
     }
     
     .footerNav {
         float: right;
         visibility: visible;
         display: inline-block;
     }
     
     .footerNav p {
         display: inline-block;
         margin: 0 15px;
     }
     
} 



/*****DESKTOP 1024*****/

@media (min-width: 1024px) {
    
    body {
        background-color:  #f6f6f6;
    }
    
    .navIntro {
        max-width: 90%;
        margin: auto;
    }
    .introContainer {
        display: inline-flex;
    }
    
    .name {
        display: inline-block;
        padding-left: 10px;
        float: left;
        margin-left: 30px;
    }
    
    .container {
        float: right;
        padding-top: 20px;
        margin-right: 30px;
    }
    
    .item {
        margin: 0;
        background-color: #f6f6f6;
    }

    .intro p {
        margin-left: 30px;
        font-size: 1.25em;
    }

    .intro img {
        width: 30%;
    }

    .sectionTitle,
    .sectionContainer{
        background-color: #fff;
    }

    .sectionTitle,
    .sectionContainer {
        width: 90%;
    }
    
    .sectionContainer {
        padding-bottom: 50px;
    }

    .heading {
        width: 33%;
    }

    .footerName {
        padding-left:  25px;
    }
    
    .footerNav {
        padding-right: 15px;
    }

}

